# brainctl

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COGNITIVE_PROTOCOL.md  CONTRIBUTING.md  Dockerfile  LICENSE  MCP_SERVER.md  README.md  README_PUBLIC.md  SECURITY.md  SKILL.md  TEMPORAL_DESIGN.md  collapse_mechanics.py  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: __init__.py  analyze_benchmark_failures.py  brainctl_retrieval.py  build_hard_negatives.py  compare_memory_engines.py  convomem_bench.py  datasets.py  framework.py  legacy_refs.py  locomo_bench.py  longmemeval_bench.py  membench_bench.py  retrieval_flow_diagnostics.py  retrieval_flow_optimizer.py  train_tiny_reranker.py
config/: distillation_policy.md
db/: init_schema.sql
db/migrations/: 002_epochs_and_temporal.sql  003_causal_threading.sql  004_cognitive_experiments.sql  005_version_optimistic_locking.sql  006_timestamp_normalization.sql  007_metacognition_gap_detection.sql  008_reflexion_failure_taxonomy.sql  009_episodic_semantic_bifurcation.sql  010_memory_event_bus.sql  011_policy_memories.sql  012_neuromodulation_state.sql  012_theory_of_mind.sql  013_continual_learning_protections.sql  013_global_workspace.sql  014_dream_hypotheses.sql  015_world_model.sql  016_incubation_queue.sql  017_global_workspace_memory_columns.sql  017_memory_rbac.sql  018_ewc_importance.sql  019_reflexion_propagation.sql  020_bayesian_evidence_columns.sql  021_agent_expertise_brier.sql  021_attention_class.sql  022_uncertainty_log.sql  023_attention_budget.sql  023_uncertainty_log_search_columns.sql  024_confidence_alpha_beta_wiring.sql  025_pii_audit.sql  026_outcome_calibration.sql  027_file_anchored_memories.sql  029_temporal_level.sql  030_consolidation_forecasts.sql  033_entity_compiled_truth.sql  034_entity_enrichment_tier.sql  035_entity_aliases.sql  036_gaps_self_healing.sql  037_encoding_affect_linkage.sql  038_synaptic_tagging.sql  039_memory_stability.sql  (+13 more)
docs/: AGENT_INSTRUCTIONS.md  AGENT_ONBOARDING.md  BASELINE_PROVENANCE.md  BENCHMARK_REPORT_2026_04_19.md  COMPARISON.md  EVAL_INTEGRITY.md  MCP_HTTP.md  PROCEDURAL_MEMORY_MIGRATION.md  QUICKSTART.md  RERANKER.md  RETRIEVAL_VALIDATION.md  SIGNED_EXPORTS.md  blog-persistent-memory.md  handoff-packets-v1.md  show-hn-draft.md
docs/audit_2026_04_19/: 00_VERIFICATION.md  01_core_engine.md  02_retrieval.md  03_mcp.md  04_cli.md  05_plugins_tests_ci.md  IMPLEMENTATION_PLAN.md
examples/: README.md  agent_lifecycle.py  multi_agent.py  quickstart.py
plugins/: TRADING_INTEGRATIONS.md
research/: 01_spaced_repetition.py  02_semantic_forgetting.py  03_ai_memory_systems.md  03_knowledge_graph.py  04_attention_salience_routing.py  04_neuroscience_memory.md  05_consolidation_cycle.py  06_contradiction_detection.py  07_emergence_detection.py  08_context_compression.py  09_creative_synthesis.py  README.md  emotion-concepts-in-llms-detailed-notes.md  emotion-concepts-in-llms-notes.md
research/quantum/: 01_decoherence_implementation.py  01_decoherence_memory_degradation.md  01_multi_agent_belief_entanglement.md  01_quantum_interference_retrieval.md  02_collapse_dynamics.md  02_phase_inference.md  03_phase_learning_dynamics.md  04_contradiction_graph_optimization.md  ANALYSIS.md  FRONTIER.md  IMPLEMENTATION_SUMMARY.md  belief_superposition.md  bell_test_computation.py  bell_test_data.json  bell_test_results.md  benchmark_results.json  decoherence_analysis.py  decoherence_analysis_results.json  empirical_decoherence.md  hilbert_dimension_analysis.md  hilbert_pca_analysis.py  hilbert_pca_results.json  implementation_roadmap.md  pca_159_recompute.py  pca_eigenvalues_159.npy  pca_mean.npy  pca_mean_159.npy  pca_projection_top100.npy  pca_projection_top159.npy  phase_inference.py  phase_learning.py  qcr_ab_results.json  qcr_ab_results_cos418.json  qcr_ab_test.py  qcr_ab_test_cos418.py  quantum-probability-foundations.md  quantum_amplitude_scorer.py  quantum_amplitude_scorer_v2.py  quantum_interference_retrieval.py  quantum_routing_integration.py  (+5 more)
research/wave10/: 28_active_inference_free_energy.md  28_attention_economics.md  28_bayesian_brain.md  28_retrieval_induced_forgetting.md  28_social_epistemology.md
research/wave12/: 29_agm_belief_revision.md  29_outcome_evaluation.md  29_proactive_interference.md  29_prospective_memory.md  29_write_decision_model.md
research/wave13/: 30_information_theory_foundations.md  30_query_intent_classification.md  31_graph_algorithms_knowledge_structure.md
research/wave14/: 32_neuroscience_grounded_improvements.md
research/wave15/: 33_v2_roadmap.md
research/wave2/: 09_associative_memory_analogical_reasoning.md  10_cognitive_compression_abstraction.md  10_predictive_cognition.md  10_temporal_reasoning_causal_inference.md  11_causal_event_graph.md  11_metacognition_self_modeling.md  (+3 more)
scripts/: bench_brain.py  check_docs.py
tests/: conftest.py  test_access_replay.py  test_affect.py  test_amac_gate.py  test_audit_2_4_11_regressions.py  test_audit_2_4_9_regressions.py  test_audit_2_5_0_regressions.py  test_benchmark_framework.py  test_brain_enhanced.py  test_causal_edges.py  test_ce_warmup_burn_in.py  test_cli.py  test_cmd_update.py  test_code_ingest.py  test_collapse_dynamics.py  test_connection_lifecycle.py  test_consolidation.py  test_consolidation_v2.py  test_context_reranker.py  test_convomem_bench.py  test_cross_encoder_rerank.py  test_datetime_hygiene.py  test_encoding_affect.py  test_encoding_context.py  test_entity_autolink.py  test_entity_compiled_truth.py  test_entity_merge_edges.py  test_eval_integrity.py  test_federation.py  test_fk_integrity_triggers.py  test_gate_calibration.py  test_hippocampus_resolve_contradictions.py  test_init.py  test_integration.py  test_integrations.py  test_intent_classifier_entity_lookup.py  test_latency_regression.py  test_locomo_bench.py  test_long_context_explorer.py  test_longmemeval_bench.py  (+62 more)
ui/: server.py
ui/static/: app.js  (+3 more)
(+394 files in other folders)
