[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brainctl"
version = "1.0.1"
description = "Persistent memory for AI agents. One SQLite file. No server, no API keys, no LLM calls. MCP server included."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Terrence Schonleber"}
]
keywords = ["ai", "agents", "memory", "mcp", "sqlite", "cognitive-architecture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
mcp = ["mcp>=1.27.0"]
vec = ["sqlite-vec>=0.1.0"]
obsidian = ["watchdog>=3.0.0"]
all = ["mcp>=1.27.0", "sqlite-vec>=0.1.0", "watchdog>=3.0.0"]

[project.scripts]
brainctl = "agentmemory.cli:main"
brainctl-mcp = "agentmemory.mcp_server:run"
brainctl-consolidate = "agentmemory.hippocampus:main"

[project.urls]
Homepage = "https://github.com/TSchonleber/brainctl"
Repository = "https://github.com/TSchonleber/brainctl"
Documentation = "https://github.com/TSchonleber/brainctl/blob/main/docs/AGENT_ONBOARDING.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentmemory = ["db/*.sql", "ui/static/*.html", "ui/static/*.css", "ui/static/*.js"]
