[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brainctl"
version = "2.3.2"
description = "Context engineering for AI agents — persistent memory, knowledge graph, affect tracking, and MCP server. Single SQLite file, zero LLM cost."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Terrence Schonleber"}
]
keywords = ["ai", "agents", "memory", "mcp", "sqlite", "cognitive-architecture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
mcp = ["mcp>=1.27.0"]
vec = ["sqlite-vec>=0.1.0"]
obsidian = ["watchdog>=3.0.0"]
ner = ["gliner>=0.2"]
langchain = ["langchain-core>=0.3.0"]
crewai = ["crewai>=0.80.0"]
# Signed memory exports + optional Solana memo-program pinning.
# solders is the pure-Rust Solana SDK Python binding (lighter than
# solana-py and ships pre-built wheels for macOS/Linux). Network
# calls go through stdlib urllib.request, so no extra HTTP dep is
# needed. brainctl imports cleanly without solders; signing CLI
# commands print an install hint if the extra is missing.
signing = ["solders>=0.21"]
# Competitor benchmark harness (tests/bench/competitor_runs/). Pulls
# every external memory SDK we score against — kept out of the default
# install because mem0ai/cognee/letta-client/zep-cloud each transitively
# pull LangChain + several hundred MB of embedding/LLM dependencies.
# Pins are PyPI-verified as of 2026-04-16 and frozen so a re-run of
# the published numbers months later resolves the same versions.
# Recommended Python: 3.13 (some pins do not yet ship 3.14 wheels).
# See tests/bench/competitor_runs/setup.sh for the canonical install
# script and tests/bench/COMPETITOR_RESULTS.md for the methodology
# the harness implements.
competitor-bench = [
    "openai==2.32.0",
    "mem0ai==2.0.0",
    "letta-client==1.10.3",
    "zep-cloud==3.20.0",
    "cognee==1.0.0",
]
all = ["mcp>=1.27.0", "sqlite-vec>=0.1.0", "watchdog>=3.0.0", "solders>=0.21"]

[project.scripts]
brainctl = "agentmemory.cli:main"
brainctl-mcp = "agentmemory.mcp_server:run"
brainctl-consolidate = "agentmemory.hippocampus:main"

[project.urls]
Homepage = "https://github.com/TSchonleber/brainctl"
Repository = "https://github.com/TSchonleber/brainctl"
Documentation = "https://github.com/TSchonleber/brainctl/blob/main/docs/AGENT_ONBOARDING.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentmemory = ["db/*.sql"]
