[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brainctl"
version = "2.4.7"
description = "Context engineering for AI agents — persistent memory, knowledge graph, affect tracking, and MCP server. Single SQLite file, zero LLM cost."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Terrence Schonleber"}
]
keywords = ["ai", "agents", "memory", "mcp", "sqlite", "cognitive-architecture"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
mcp = ["mcp>=1.27.0"]
# Vector index extra. Pulls sqlite-vec for ANN over `vec_memories`.
# brainctl uses Ollama (NOT a Python embedding lib) to generate the
# vectors — so the only extra Python dep here is the sqlite extension
# loader. Models are pulled separately via `ollama pull <tag>`; the
# registry of supported models lives in `agentmemory.embeddings`:
#
#   nomic-embed-text         (768-dim,  ~274 MB)  — current default
#   bge-m3                   (1024-dim, ~1.2 GB)
#   mxbai-embed-large        (1024-dim, ~669 MB)
#   snowflake-arctic-embed2  (1024-dim, ~1.2 GB)
#   qwen3-embedding:8b       (4096-dim, ~4.7 GB)
#
# Switch via `BRAINCTL_EMBED_MODEL=<name>` (the registry resolves dim).
# When changing models on an existing brain.db, run
# `brainctl vec reindex --model <name>` to migrate the vector index.
# The dim-mismatch validator will refuse to silently mix dims.
vec = ["sqlite-vec>=0.1.3"]  # 0.1.3 fixes CVE-2024-46488 / GHSA-vrcx-gx3g-j3h8 (heap buffer overflow)
obsidian = ["watchdog>=3.0.0"]
ner = ["gliner>=0.2"]
langchain = ["langchain-core>=0.3.0"]
crewai = ["crewai>=0.80.0"]
# Signed memory exports + optional Solana memo-program pinning.
# solders is the pure-Rust Solana SDK Python binding (lighter than
# solana-py and ships pre-built wheels for macOS/Linux). Network
# calls go through stdlib urllib.request, so no extra HTTP dep is
# needed. brainctl imports cleanly without solders; signing CLI
# commands print an install hint if the extra is missing.
signing = ["solders>=0.21"]
# Cross-encoder reranker stage (2.4.0+, opt-in via `brainctl search
# --rerank`). sentence-transformers loads the supported cross-encoder
# models (BAAI/bge-reranker-v2-m3, jinaai/jina-reranker-v2-base-
# multilingual) directly from the Hugging Face Hub on first use.
# torch is a hard dep of sentence-transformers and adds ~1GB to the
# install — that's why this is gated behind an optional extra rather
# than the base install. brainctl imports cleanly without these; the
# rerank module emits a single stderr warning and falls through to
# the input ordering when the extras are missing.
# torch>=2.4 for weights_only=True default; see docs about HuggingFace model trust
rerank = ["sentence-transformers>=3.0", "torch>=2.4"]
# Code-aware knowledge-graph ingestion (2.4.5+). Walks a source tree,
# parses supported files with tree-sitter (no LLM, no GPU), writes
# file / function / class entities plus `contains` / `imports`
# knowledge_edges into brain.db. SHA256-cached in migration 051 so
# re-runs skip unchanged files. Ships only three grammars on purpose:
# python, typescript, and go cover the bulk of brainctl-adjacent
# repos and keep the wheel footprint small (~4 MB). Adding a grammar
# means also updating `EXT_TO_LANG` and `EXTRACTORS` in
# `src/agentmemory/code_ingest.py`. Inspired by
# github.com/safishamsi/graphify (the {nodes, edges} extractor
# protocol + SHA256 skip-when-unchanged pattern); brainctl's entity
# graph + migration discipline are reused as-is.
code = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
]
# Competitor benchmark harness (tests/bench/competitor_runs/). Pulls
# every external memory SDK we score against — kept out of the default
# install because mem0ai/cognee/letta-client/zep-cloud each transitively
# pull LangChain + several hundred MB of embedding/LLM dependencies.
# Pins are PyPI-verified as of 2026-04-16. See
# tests/bench/competitor_runs/setup.sh and tests/bench/COMPETITOR_RESULTS.md.
competitor-bench = [
    "openai==2.32.0",
    "mem0ai==2.0.0",
    "letta-client==1.10.3",
    "zep-cloud==3.20.0",
    "cognee==1.0.0",
]
# Core benchmark harness deps — `python -m tests.bench.run --check-strict`
# reads per-bench tolerance YAMLs via PyYAML. The gate module falls back
# to hardcoded defaults when PyYAML is absent, so this is only strictly
# required when someone edits the budgets/*.yaml files and expects the
# runtime to pick up their overrides. CI installs it for --check-strict.
bench = [
    "PyYAML>=6.0",
]
all = [
    "mcp>=1.27.0",
    "sqlite-vec>=0.1.3",
    "watchdog>=3.0.0",
    "solders>=0.21",
    "sentence-transformers>=3.0",
    "torch>=2.4",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23",
    "tree-sitter-typescript>=0.23",
    "tree-sitter-go>=0.23",
    "PyYAML>=6.0",
]

[project.scripts]
brainctl = "agentmemory.cli:main"
brainctl-mcp = "agentmemory.mcp_server:run"
brainctl-consolidate = "agentmemory.hippocampus:main"

[project.urls]
Homepage = "https://github.com/TSchonleber/brainctl"
Repository = "https://github.com/TSchonleber/brainctl"
Documentation = "https://github.com/TSchonleber/brainctl/blob/main/docs/AGENT_ONBOARDING.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agentmemory = ["db/*.sql"]
